<resources>
    <string name="app_name">KvantNews</string>
    <string name="havent_account">Нет акаунта?</string>
    <string name="create">Создать</string>
    <string name="login">Войти</string>
    <string name="user">Пользователь</string>
    <string name="password">Пароль</string>
    <string name="remind_password">Напомнить пароль</string>
    <string name="title_activity_main_drawer">MainDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_activities">Активности</string>
    <string name="this_week">Эта неделя</string>
    <string name="this_month">Этот месяц</string>
    <string name="this_year">Этот год</string>
    <string name="events">Мероприятия</string>
    <string name="learning">Обучение</string>
    <string name="competitions">Соревнования</string>
    <string name="main_host_dns">https://kvantfp.000webhostapp.com/</string>
    <string name="create_account">Создать аккаунт</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="user_name">Имя пользователя</string>
    <string name="mail">Почта</string>
    <string name="no_internet_connection">Отсутствует подключение к интернету</string>
    <string name="please_wait">Пожалуйста, подождите</string>
    <string name="its_fail">Что-то пошло не так</string>
    <string name="you_are_successfully_registrated">Вы успешно зарегистрировались</string>
    <string name="passwords_should_equals">Пароли должны совпадать</string>
    <string name="lenght_of_password">Длина пароля должна быть больше 4 и меньше 16 символов</string>
    <string name="lenght_of_login">Длина логина должна быть больше 4 и меньше 20 символов</string>
    <string name="failed_email">Неверный адрес электронной почты</string>
    <string name="enter_correct_password">Введите корректный логин</string>
    <string name="password_remind_sended">Письмо подтверждения изменения пароля отправлено на вашу почту</string>
    <string name="menu_exit">Выход</string>
    <string name="notification">Показывать уведомления</string>
    <string name="q_and_a"><![CDATA[Q&A и некоторые советы]]></string>
    <string name="info">Info</string>
    <string name="questions">Часто задаваемые вопросы</string>
    <string name="v_1_0">KvantNews v.1.0.0</string>
    <string name="_2020">Разработано в 2020 году</string>
    <string name="developers">Проект двух начинающих программистов из Сыктывкара</string>
    <string name="special_for">Специально для Кванториума</string>
    <string name="exit_from_account">Выйти из аккаунта</string>

    <string name="news">Новости</string>
    <string name="timetable">Расписание</string>
    <string name="posts">Новости курсов</string>
    <string name="achievements">Достижения</string>
    <string name="support">Поддержка</string>
    <string name="settings">Настройки</string>
    <string name="exit">Выход</string>
    <string name="kvant_news">Kvant News</string>
    <string name="username">Username</string>
    <string name="reload">Обновить</string>
    <string name="back">Назад</string>
    <string name="news_is_reloaded">Новости обновлены</string>
    <string name="choose_your_course">Выберите курс</string>
    <string name="course_name">Название курса</string>
    <string name="date_n_time">день и время</string>
    <string name="groupp">группа</string>
    <string name="monday">понедельник</string>
    <string name="tuesday">вторник</string>
    <string name="wednesday">среда</string>
    <string name="thursday">четверг</string>
    <string name="friday">пятница</string>
    <string name="saturday">суббота</string>
    <string name="sunday">воскресенье</string>
    <string name="Your_question">Введите ваш вопрос</string>
    <string name="submit">Отправить</string>
    <string name="is_ready">Готово</string>
    <string name="you_havent_children">У вас пока нет детей, зарегистрированных в системе.</string>
    <string name="ChangeNewsError">Ошибка изменения новости</string>
    <string name="NewsChangedSuccessfully">Новость успешно изменена</string>
    <string name="NewsAddedSuccessfully">Новость успешно добавлена</string>
    <string name="AddingNewsError">Ошибка добавления новости</string>
    <string name="havent_any_available_courses">У вас нет доступных курсов.</string>
    <string name="havent_achievements">Нет достижений</string>
</resources>