<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_activities">

    <fragment
        android:id="@+id/nav_activities"
        android:name="com.example.kvantnews.ui.activities.ActivitiesFragment"
        android:label="@string/menu_activities"
        tools:layout="@layout/fragment_activities" />

    <fragment
        android:id="@+id/nav_news"
        android:name="com.example.kvantnews.ui.news.NewsFragment"
        android:label="@string/news"
        tools:layout="@layout/fragment_news">
    </fragment>

    <fragment
        android:id="@+id/nav_timetable"
        android:name="com.example.kvantnews.ui.timetable.TimetableFragment"
        android:label="@string/timetable"
        tools:layout="@layout/fragment_timetable" />

    <fragment
        android:id="@+id/nav_posts"
        android:name="com.example.kvantnews.ui.posts.PostsFragment"
        android:label="@string/posts"
        tools:layout="@layout/fragment_posts" />
    <fragment
        android:id="@+id/nav_achievements"
        android:name="com.example.kvantnews.ui.achievements.AchievementsFragment"
        android:label="@string/achievements"
        tools:layout="@layout/fragment_achievements" />
    <fragment
        android:id="@+id/nav_support"
        android:name="com.example.kvantnews.ui.support.SupportFragment"
        android:label="@string/support"
        tools:layout="@layout/fragment_support" />

    <fragment
        android:id="@+id/nav_exit"
        android:name="com.example.kvantnews.ui.exit.ExitFragment"
        android:label="@string/menu_activities" />


</navigation>