<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/login_background">
    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/kvant_icon_for_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="125dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:layout_marginTop="397dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:orientation="horizontal"
            android:layout_marginHorizontal="20dp"
            >

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/user_icon"
                tools:ignore="ContentDescription" />
            <EditText
                android:id="@+id/user_login_et"
                android:textSize="15sp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/user"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:backgroundTint="@android:color/transparent"
                android:layout_marginStart="7dp"
                android:inputType="textPersonName"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:background="@color/gray"
            android:layout_height="1dp"
            android:layout_marginTop="2dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:orientation="horizontal"
            android:layout_marginTop="25dp"
            android:layout_marginHorizontal="20dp"
            >

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/password_icon"/>
            <EditText
                android:id="@+id/user_password_et"
                android:textSize="15sp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/password"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:backgroundTint="@android:color/transparent"
                android:layout_marginStart="7dp"
                android:autofillHints="user_password"
                android:inputType="textPassword"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:background="@color/gray"
            android:layout_height="1dp"
            android:layout_marginTop="2dp"/>

        <Button
            android:id="@+id/remind_password_btn"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@null"
            android:text="@string/remind_password"
            android:textColor="@color/remind_password_text"
            android:textSize="14dp"
            android:textAllCaps="false"
            android:layout_marginLeft="256dp"/>
    </LinearLayout>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="62dp"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/login_button_style"
        android:text="@string/login"
        android:textColor="@color/login_button_text"
        android:textAllCaps="false"
        android:textSize="19sp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="9dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/havent_account"
            android:textColor="@color/have_not_account_text"/>
        <Button
            android:id="@+id/create_account_btn"
            android:textAllCaps="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create"
            android:background="@null"
            android:textColor="@color/white"/>
    </LinearLayout>


</RelativeLayout>