<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.ActivitiesFragment"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/tool_bar">
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/this_week"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:id="@+id/this_week_btn"
                android:textColor="@color/white"
                android:background="@color/tool_bar"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/this_month"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:id="@+id/this_month_btn"
                android:textColor="@color/white"
                android:background="@color/tool_bar"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/this_year"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:id="@+id/this_year_btn"
                android:textColor="@color/white"
                android:background="@color/tool_bar"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_marginTop="44dp"
            android:orientation="horizontal">
            <View
                android:layout_width="0dp"
                android:background="@null"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/selected_period_bar_btn1"
                />
            <View
                android:layout_width="0dp"
                android:background="@color/red"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/selected_period_bar_btn2"
                />
            <View
                android:layout_width="0dp"
                android:background="@null"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/selected_period_bar_btn3"
                />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>