<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity">

    <ImageView
        android:id="@+id/login_main_iv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:maxHeight="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/login_background" />

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/kvant_icon_for_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="125dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:layout_marginTop="337dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:orientation="horizontal"
            android:layout_marginHorizontal="20dp"
            >

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/user_icon"
                tools:ignore="ContentDescription" />
            <EditText
                android:id="@+id/user_login_et"
                android:textSize="15sp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/user_name"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:backgroundTint="@android:color/transparent"
                android:layout_marginStart="7dp"
                android:inputType="textPersonName"
                tools:ignore="Autofill" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:background="@color/gray"
            android:layout_height="1dp"
            android:layout_marginTop="2dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:orientation="horizontal"
            android:layout_marginTop="25dp"
            android:layout_marginHorizontal="20dp"
            >

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/mail_icon"
                tools:ignore="ContentDescription" />
            <EditText
                android:id="@+id/user_mail_et"
                android:textSize="15sp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/mail"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:backgroundTint="@android:color/transparent"
                android:layout_marginStart="7dp"
                android:autofillHints="user_password"
                android:inputType="textEmailAddress"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:background="@color/gray"
            android:layout_height="1dp"
            android:layout_marginTop="2dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:orientation="horizontal"
            android:layout_marginTop="25dp"
            android:layout_marginHorizontal="20dp"
            >

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/password_icon"
                tools:ignore="ContentDescription" />
            <EditText
                android:id="@+id/user_password_et"
                android:textSize="15sp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/password"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:backgroundTint="@android:color/transparent"
                android:layout_marginStart="7dp"
                android:autofillHints="user_password"
                android:inputType="textPassword"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:background="@color/gray"
            android:layout_height="1dp"
            android:layout_marginTop="2dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:orientation="horizontal"
            android:layout_marginTop="25dp"
            android:layout_marginHorizontal="20dp"
            >

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/password_icon"
                tools:ignore="ContentDescription" />
            <EditText
                android:id="@+id/user_password_repeat_et"
                android:textSize="15sp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/repeat_password"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:backgroundTint="@android:color/transparent"
                android:layout_marginStart="7dp"
                android:autofillHints="user_password"
                android:inputType="textPassword"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:background="@color/gray"
            android:layout_height="1dp"
            android:layout_marginTop="2dp"/>



    </LinearLayout>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="62dp"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/login_button_style"
        android:text="@string/create_account"
        android:textColor="@color/login_button_text"
        android:textAllCaps="false"
        android:textSize="19sp"/>



</RelativeLayout>